--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
- NEXT_PUBLIC_DOMAIN : http://localhost:3000;
-NEXT_PUBLIC_API_DOMAIN : http://localhost:3000/api;
- MONGO_URI = mongodb+srv://rbzashu:Ashish22197@propertypulse.ujbdycq.mongodb.net/?retryWrites=true&w=majority&appName=propertyPulse;
+ NEXT_PUBLIC_DOMAIN = http://localhost:3000
+NEXT_PUBLIC_API_DOMAIN =http://localhost:3000/api
+ MONGO_URI = mongodb+srv://rbzashu:Ashish22197@propertypulse.ujbdycq.mongodb.net/?retryWrites=true&w=majority&appName=propertyPulse
 
 
